--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -107,6 +107,10 @@
   height: 1em;
   margin-left: 0.5rem;
 }
+.homecontainer{
+  display: flex;
+  width: 100%;
+}
 
 @media (max-width: 600px) {
   .grid {
